--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.381.0",
     "match-sorter": "^6.3.4",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
