--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.381.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
