--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -22,16 +24,19 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.381.0",
     "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
+    "react-use": "^17.5.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0",
     "tailwind-merge": "^2.3.0",
