--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.5.0",
     "@tanstack/react-query": "^5.40.0",
+    "aos": "^2.3.4",
     "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -42,6 +43,7 @@
     "react-icons": "^5.2.1",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.23.1",
+    "react-scroll-trigger": "^0.6.14",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
     "react-use": "^17.5.0",
